# fentc

./: Cargo.toml  flake.nix
examples/: garden.fe
fentc/: Cargo.toml
fentc-cli/: Cargo.toml
fentc-lsp/: Cargo.toml
fentc/src/parser/: ast.rs  combinator.rs  identifier.rs  mod.rs  operator.rs  span.rs  token.rs
